<resources>
    <string name="app_name">Back4AppExample</string>


    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" translatable="false">NLP7zvCSn93oMVtXonkSK3yCjJdMmLG1q5NKtfc6</string>
    <string name="back4app_client_key" translatable="false">Z0YqthdlMOVYNl5Wv95OouFz73JviFSljQW3ZUYX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_hay_datos">No hay datos</string>
    <string name="saved_high_score_key" />
    <string name="reminder_date" >Reminder Date</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="item_todo" >Item toDo</string>
    <string name="additional_information">Additional Information</string>
    <string name="is_it_available">Is it available?</string>
    <string name="update_item">Update</string>
    <string name="delete_item">Delete</string>

</resources>